--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -4,14 +4,14 @@ spring:
   application:
     name: hmdp
   datasource:
-    driver-class-name: com.mysql.cj.jdbc.Driver
+    driver-class-name: com.mysql.jdbc.Driver
     url: jdbc:mysql://127.0.0.1:3306/hmdp?useSSL=false&serverTimezone=UTC&charactEncoding=UTF-8
     username: root
     password: root
   redis:
-    host: 192.168.171.128
-    port: 6379
-    password: 123456
+    host: 192.168.171.128    # 虚拟机地址
+    port: 6379               # redis端口
+    password: 123456         # redis密码
     lettuce:
       pool:
         max-active: 10
@@ -24,4 +24,4 @@ mybatis-plus:
   type-aliases-package: com.hmdp.entity # 别名扫描包
 logging:
   level:
-    com.hmdp: debug
+    com.hmdp: debug   # 日志
