--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -9,7 +9,7 @@ spring:
     username: root
     password: root
   redis:
-    host: 192.168.171.128    # 虚拟机地址
+    host: 192.168.241.128    # 虚拟机中redis地址
     port: 6379               # redis端口
     password: 123456         # redis密码
     lettuce:
