--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -21,6 +21,7 @@ spring:
     database: 0
   jackson:
     default-property-inclusion: non_null # JSON处理时忽略非空字段
+#  profiles: druid
 mybatis-plus:
   type-aliases-package: com.hmdp.entity # 别名扫描包
 logging:
