feat: 单体架构下synchronized和CAS乐观锁解决库存超卖和一人一单需求

--- a/pom.xml
+++ b/pom.xml
@@ -104,6 +104,12 @@
             <artifactId>fastjson</artifactId>
             <version>1.2.83</version>
         </dependency>
+
+        <!-- aop 动态代理-->
+        <dependency>
+            <groupId>org.aspectj</groupId>
+            <artifactId>aspectjweaver</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
