--- a/pom.xml
+++ b/pom.xml
@@ -117,6 +117,14 @@
             <artifactId>redisson</artifactId>
             <version>3.24.3</version>
         </dependency>
+
+        <!-- jedis -->
+        <dependency>
+            <groupId>redis.clients</groupId>
+            <artifactId>jedis</artifactId>
+            <version>5.0.1</version>
+        </dependency>
+
     </dependencies>
 
     <build>
