--- a/src/main/resources/application-druid.yml
+++ b/src/main/resources/application-druid.yml
@@ -1,18 +1,29 @@
-# 数据源配置
-#spring:
-#  datasource:
-#    driver-class-name: com.mysql.cj.jdbc.Driver
-#    url: jdbc:mysql://127.0.0.1:3306/hmdp?useSSL=false&serverTimezone=UTC&charactEncoding=UTF-8
-#    username: root
-#    password: root
-#  redis:
-#    host: 192.168.241.128    # 虚拟机中redis地址
-#    port: 6379               # redis端口
-#    password: 123456         # redis密码
-#    lettuce:
-#      pool:
-#        max-active: 10
-#        max-idle: 10
-#        min-idle: 1
-#        time-between-eviction-runs: 10s
-#    database: 0
+server:
+  port: 8081
+spring:
+  datasource:
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://127.0.0.1:3306/hmdp?useSSL=false&serverTimezone=UTC&charactEncoding=UTF-8
+    username: root
+    password: root
+  redis:
+    host: 192.168.241.128    # 虚拟机中redis地址
+    port: 6379               # redis端口
+    password: 123456         # redis密码
+    lettuce:
+      pool:
+        max-active: 10
+        max-idle: 10
+        min-idle: 1
+        time-between-eviction-runs: 10s
+    database: 0
+# swagger
+knife4j:
+  # 开启增强配置
+  enable: true
+  # 开启生产环境屏蔽
+  production: false
+  basic:
+    enable: false
+    username: admin
+    password: admin123
