--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,27 +1,10 @@
-server:
-  port: 8081
 spring:
   application:
     name: hmdp
-  datasource:
-    driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://127.0.0.1:3306/hmdp?useSSL=false&serverTimezone=UTC&charactEncoding=UTF-8
-    username: root
-    password: root
-  redis:
-    host: 192.168.241.128    # 虚拟机中redis地址
-    port: 6379               # redis端口
-    password: 123456         # redis密码
-    lettuce:
-      pool:
-        max-active: 10
-        max-idle: 10
-        min-idle: 1
-        time-between-eviction-runs: 10s
-    database: 0
   jackson:
     default-property-inclusion: non_null # JSON处理时忽略非空字段
-#  profiles: druid
+  profiles:
+    active: '@profile.name@'
 mybatis-plus:
   type-aliases-package: com.hmdp.entity # 别名扫描包
 logging:
