--- a/src/main/resources/application-druid.yml
+++ b/src/main/resources/application-druid.yml
@@ -18,12 +18,12 @@ spring:
         time-between-eviction-runs: 10s
     database: 0
 # swagger
-knife4j:
-  # 开启增强配置
-  enable: true
-  # 开启生产环境屏蔽
-  production: false
-  basic:
-    enable: false
-    username: admin
-    password: admin123
+#knife4j:
+#  # 开启增强配置
+#  enable: true
+#  # 开启生产环境屏蔽
+#  production: false
+#  basic:
+#    enable: false
+#    username: admin
+#    password: admin123
