--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,11 @@
     <properties>
         <java.version>1.8</java.version>
         <knife4j-spring-boot-starter.version>3.0.3</knife4j-spring-boot-starter.version>
+        <redisson.version>3.24.3</redisson.version>
+        <fastjson.version>1.2.83</fastjson.version>
+        <hutool-all.version>5.7.17</hutool-all.version>
+        <mybatis-plus-boot-starter.version>3.4.3</mybatis-plus-boot-starter.version>
+        <mysql-connector-java.version>8.0.20</mysql-connector-java.version>
     </properties>
     <dependencies>
         <!-- data-redis2.3.12-->
@@ -66,7 +71,7 @@
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
             <scope>runtime</scope>
-            <version>8.0.20</version>
+            <version>${mysql-connector-java.version}</version>
         </dependency>
 
         <dependency>
@@ -90,20 +95,20 @@
         <dependency>
             <groupId>com.baomidou</groupId>
             <artifactId>mybatis-plus-boot-starter</artifactId>
-            <version>3.4.3</version>
+            <version>${mybatis-plus-boot-starter.version}</version>
         </dependency>
         <!--hutool-->
         <dependency>
             <groupId>cn.hutool</groupId>
             <artifactId>hutool-all</artifactId>
-            <version>5.7.17</version>
+            <version>${hutool-all.version}</version>
         </dependency>
 
         <!-- fastjson -->
         <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>fastjson</artifactId>
-            <version>1.2.83</version>
+            <version>${fastjson.version}</version>
         </dependency>
 
         <!-- aop 动态代理-->
@@ -116,7 +121,7 @@
         <dependency>
             <groupId>org.redisson</groupId>
             <artifactId>redisson</artifactId>
-            <version>3.24.3</version>
+            <version>${redisson.version}</version>
         </dependency>
 
         <!-- jedis -->
@@ -126,7 +131,6 @@
             <version>5.0.1</version>
         </dependency>
 
-        <!-- knife4j -->
         <dependency>
             <groupId>com.github.xiaoymin</groupId>
             <artifactId>knife4j-spring-boot-starter</artifactId>
