--- a/nginx-1.18.0/conf/nginx.conf
+++ b/nginx-1.18.0/conf/nginx.conf
@@ -14,7 +14,7 @@ http {
     keepalive_timeout  65;
 
     server {
-        listen       8080;   # 反向代理监听的端口
+        listen       8080;
         server_name  localhost;
         # 指定前端项目所在的位置
         location / {
@@ -39,13 +39,13 @@ http {
             proxy_pass_request_headers on;
             #more_clear_input_headers Accept-Encoding;  
             proxy_next_upstream error timeout;  
-            proxy_pass http://127.0.0.1:8081;     # 正向代理 8081
-            # proxy_pass http://backend;        # 反向代理
+            proxy_pass http://127.0.0.1:8081;
+            #proxy_pass http://backend;
         }
     }
 
     upstream backend {
-        server 127.0.0.1:8081 max_fails=5 fail_timeout=10s weight=1;# 代理服务器 8080 ---> 8081		
-        server 127.0.0.1:8082 max_fails=5 fail_timeout=10s weight=1;# 代理服务器 8080 ---> 8082
+        server 127.0.0.1:8081 max_fails=5 fail_timeout=10s weight=1;
+        #server 127.0.0.1:8082 max_fails=5 fail_timeout=10s weight=1;
     }  
 }
